add + deletel views

--- a/theblog/templates/theblog/deteil.html
+++ b/theblog/templates/theblog/deteil.html
@@ -1,16 +1,19 @@
 {% extends "theblog/home.html" %}
 {% block content %}
-<div class="container">
+<div style="background-color: rgb(248, 210, 210);" class="container">
     <h1><span>{{post.title}}</span></h1><br>
-    <small>{{post.author}}<button type="button" class="btn btn-light"><a href="{% url 'update_post' post.pk %}">Update</a></button></small>
+    <small>{{post.author}}
+        <button type="button" class="btn btn-light"><a href="{% url 'update_post' post.pk %}">Update</a></button>
+        <button type="button" class="btn btn-light"><a href="{% url 'delete_post' post.pk %}">Delete</a></button>
+    </small>
     <hr>
     <span>{{post.body}}</span>
 
     <br>
     <br>
-    <button type="button" class="btn btn-dark"><a href="{% url 'home' %}">Back</a></button>
-
+    
 </div>
+<button type="button" class="btn btn-dark"><a href="{% url 'home' %}">Back</a></button>
 <br><br>
 <h1>thanks</h1>
   
