--- a/theblog/templates/theblog/home.html
+++ b/theblog/templates/theblog/home.html
@@ -43,7 +43,11 @@
             <h3><a href="{% url 'add_post' %}">Add New Post</a></h3>
             <ul>
                 {% for post in object_list%}
-                 <li><a href="{% url 'deteil' post.pk %}">{{post.title}}</a>- by: {{post.author}} --  <small> <button type="button" class="btn btn-light"><a href="{% url 'update_post' post.pk %}">Update</a></button></small><br>
+                 <li><a href="{% url 'deteil' post.pk %}">{{post.title}}</a>- by: {{post.author}} --  
+                    <small>
+                         <button type="button" class="btn btn-light"><a href="{% url 'update_post' post.pk %}">Update</a></button>
+                        <button type="button" class="btn btn-light"><a href="{% url 'delete_post' post.pk %}">Delete</a></button>
+                    </small><br>
                     {{post.body}}</li><hr><br>
                     {% endfor %}
              </ul>
