--- a/theblog/templates/theblog/delete_post.html
+++ b/theblog/templates/theblog/delete_post.html
@@ -3,16 +3,20 @@
 {% load crispy_forms_tags %}
 {% block content %}
 <div class="container">
-   <form style="background-color: rgb(255, 243, 243);" method="POST">
-    {{post.title}}
-    {% csrf_token %}
-    
-    <button type="submit" class="btn btn-primary">Delete</button>
-   </form>
+   {% if user.is_authenticated %}
+      <form style="background-color: rgb(255, 243, 243);" method="POST">
+      {{post.title}}
+      {% csrf_token %}
+      
+      <button type="submit" class="btn btn-primary">Delete</button>
+      </form>
+   {%else%}
+   <h1>you,er not Login/h1>
+   {%endif%}
+   </div>
    <br>
    <br>
-   <button type="button" class="btn btn-dark "><a href="{% url 'home' %}">Back</a></button>
-</div>
+   <button type="button" class="btn btn-outline-dark"><a href="{% url 'home' %}">Back</a></button>
 <br><br>
 <h1>thanks</h1>
   
