--- a/theblog/templates/theblog/home.html
+++ b/theblog/templates/theblog/home.html
@@ -7,12 +7,13 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
     <title>
-    {% block title %}
-      Blog view
-    {% endblock title %}
+        {% block title %}
+          Blog view
+        {% endblock title %}
     </title>
 </head>
 <body>
+    
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="{% url 'home' %}">BLOG/ {{post.author}}</a>
@@ -39,17 +40,36 @@
       </nav>
     <section>
         <div class="container">
+          <div>
+            {% if user.is_authenticated %}
+            <a href="#">Wellcome--{{user.username}}</a>
+            <a href="{% url 'logout' %}">Logout</a>
+            {% else %}
+            <a href="{% url 'login' %}">Login</a>
+            {% endif %}
+          </div>
             <h1>Post</h1>
+            {% if user.is_authenticated %}
             <h3><a href="{% url 'add_post' %}">Add New Post</a></h3>
+            <h3><a href="{% url 'add_category' %}">Add New Category</a></h3>
+            {%endif%}
             <ul>
                 {% for post in object_list%}
-                 <li><a href="{% url 'deteil' post.pk %}">{{post.title}}</a>- by: {{post.author}} --  
+                 <li>
+                    <h1><a href="#">{{post.category}}</a></h1><br>
+                    <a href="{% url 'deteil' post.pk %}">{{post.title}}</a>- by: {{post.author}} --  
                     <small>
-                         <button type="button" class="btn btn-light"><a href="{% url 'update_post' post.pk %}">Update</a></button>
-                        <button type="button" class="btn btn-light"><a href="{% url 'delete_post' post.pk %}">Delete</a></button>
-                    </small><br>
-                    {{post.body}}</li><hr><br>
-                    {% endfor %}
+                        {% if user.is_authenticated %}
+                         <button type="button" class="btn btn-outline-primary"><a href="{% url 'update_post' post.pk %}">Update</a></button>
+                        <button type="button" class="btn btn-outline-danger"><a href="{% url 'delete_post' post.pk %}">Delete</a></button>
+                       
+                        {%endif%}
+                      </small><br>
+                    <small> {{post.post_date}}</small> 
+                    <br>
+                    {{post.body}}
+                    </li><hr><br>
+                {% endfor %}
              </ul>
         </div>    
      </section>
