--- a/theblog/templates/theblog/update_post.html
+++ b/theblog/templates/theblog/update_post.html
@@ -3,11 +3,15 @@
 {% load crispy_forms_tags %}
 {% block content %}
 <div class="container">
+   {% if user.is_authenticated %}
    <form style="background-color: rgb(255, 243, 243);" method="POST">
     {% csrf_token %}
     {{form|crispy}}
     <button type="submit" class="btn btn-primary">Update</button>
    </form>
+   {%else%}
+   <h1>you,er not Login/h1>
+   {%endif%}
    <br>
    <br>
    <button type="button" class="btn btn-dark "><a href="{% url 'home' %}">Back</a></button>
