add some javascript to make the login user post auto in the author

--- a/theblog/templates/theblog/add_post.html
+++ b/theblog/templates/theblog/add_post.html
@@ -12,6 +12,10 @@
    <br>
    <br>
    <button type="button" class="btn btn-outline-dark "><a href="{% url 'home' %}">Back</a></button>
+   <script>
+      var name = "{{user.id}}";
+      document.getElementById("user").value = name;
+   </script>
    {%endif%}
 </div>
 <br><br>
