--- a/theblog/templates/theblog/deteil.html
+++ b/theblog/templates/theblog/deteil.html
@@ -4,9 +4,13 @@
 <div style="background-color: rgb(248, 210, 210);" class="container">
     <h1><span>{{post.title}}--{{post.category}}</span></h1><br>
     <small>{{post.author}}-post in{{post.post_date}}:<br>
+        user {{user.id}}
+        author {{post.author.id}}
         {% if user.is_authenticated %}
-        <button type="button" class="btn btn-outline-primary"><a href="{% url 'update_post' post.pk %}">Update</a></button>
-        <button type="button" class="btn btn-outline-danger"><a href="{% url 'delete_post' post.pk %}">Delete</a></button>
+            {% if user.id == post.author.id %}
+            <button type="button" class="btn btn-outline-primary"><a href="{% url 'update_post' post.pk %}">Update</a></button>
+            <button type="button" class="btn btn-outline-danger"><a href="{% url 'delete_post' post.pk %}">Delete</a></button>
+            {%endif%}
         {%endif%}
     </small>
     <hr>
