--- a/theblog/templates/theblog/home.html
+++ b/theblog/templates/theblog/home.html
@@ -29,7 +29,7 @@
                 <a class="nav-link" href="{% url 'add_post' %}">Add New Posst</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
+                <a class="nav-link" href="#">Category</a>
               </li>
             </ul>
             <span class="navbar-text">
@@ -47,36 +47,38 @@
             {% else %}
             <a href="{% url 'login' %}">Login</a>
             {% endif %}
-          </div>
-            <h1>Post</h1>
-            {% if user.is_authenticated %}
-            <h3><a href="{% url 'add_post' %}">Add New Post</a></h3>
-            <h3><a href="{% url 'add_category' %}">Add New Category</a></h3>
-            {%endif%}
-            <ul>
-                {% for post in object_list%}
-                 <li>
-                    <h1><a href="#">{{post.category}}</a></h1><br>
-                    <a href="{% url 'deteil' post.pk %}">{{post.title}}</a>- by: {{post.author}} --  
-                    <small>
-                        {% if user.is_authenticated %}
-                         <button type="button" class="btn btn-outline-primary"><a href="{% url 'update_post' post.pk %}">Update</a></button>
-                        <button type="button" class="btn btn-outline-danger"><a href="{% url 'delete_post' post.pk %}">Delete</a></button>
-                       
-                        {%endif%}
-                      </small><br>
-                    <small> {{post.post_date}}</small> 
-                    <br>
-                    {{post.body}}
-                    </li><hr><br>
-                {% endfor %}
-             </ul>
-        </div>    
+           
      </section>
     <script src="{% static 'js/bootstrap.js' %}"></script>
+    {% block content %}
     <div class="container">
-        {% block content %}
       
+      <h1>Post</h1>
+      {% if user.is_authenticated %}
+      <h3><a href="{% url 'add_post' %}">Add New Post</a></h3>
+      <h3><a href="{% url 'add_category' %}">Add New Category</a></h3>
+      {%endif%}
+      <ul>
+          {% for post in object_list%}
+           <li>
+              
+              <a href="{% url 'deteil' post.pk %}">{{post.title}}</a>- by: {{post.author}} --  
+              <small>
+                  {% if user.is_authenticated %}
+                    {% if user.id == post.author.id %}
+                        <button type="button" class="btn btn-outline-primary"><a href="{% url 'update_post' post.pk %}">Update</a></button>
+                        <button type="button" class="btn btn-outline-danger"><a href="{% url 'delete_post' post.pk %}">Delete</a></button>
+                    {% endif %}
+                  {%endif%}
+                </small><br>
+                <a href="{% url 'detail_category' post.id %}">category -{{post.category}}</a><br>
+              <small> {{post.post_date}}</small> 
+              <br>
+              {{post.body}}
+              </li><hr><br>
+          {% endfor %}
+       </ul>
+  </div> 
         {% endblock content %}
     </div>
 </body>
