--- a/theblog/templates/theblog/home.html
+++ b/theblog/templates/theblog/home.html
@@ -74,7 +74,7 @@
                 <a href="{% url 'detail_category' post.id %}">category -{{post.category}}</a><br>
               <small> {{post.post_date}}</small> 
               <br>
-              {{post.body}}
+              {{post.body|safe}}
               </li><hr><br>
           {% endfor %}
        </ul>
