--- a/theblog/templates/theblog/home.html
+++ b/theblog/templates/theblog/home.html
@@ -44,6 +44,7 @@
             {% if user.is_authenticated %}
             <a href="#">Wellcome--{{user.username}}</a>
             <a href="{% url 'logout' %}">Logout</a>
+            <a href="{% url 'edit_profile' %}">Edit Profile</a>
             {% else %}
             <a href="{% url 'login' %}">Login</a>
             {% endif %}
